--- a/app/src/main/res/layout/item_card_sales.xml
+++ b/app/src/main/res/layout/item_card_sales.xml
@@ -4,97 +4,136 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="15dp"
-    android:layout_marginEnd="15dp">
+    android:layout_marginEnd="8dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/gradient">
+        android:orientation="vertical">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="164dp"
+            android:layout_height="216dp"
+            android:layout_marginHorizontal="38dp"
+            android:layout_gravity="center">
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/imageView"
+                android:layout_width="164dp"
+                android:layout_height="216dp"
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/imageViewNewClothes2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:cardCornerRadius="15dp"
-            android:background="@color/splash"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginTop="5dp">
+                android:src="@drawable/jesus"
+                android:scaleType="fitXY"
 
-            <ImageView
-                android:id="@+id/imageViewNewClothes"
-                android:layout_width="190dp"
-                android:layout_height="190dp"
-                android:scaleType="fitStart"
-                android:src="@drawable/new_clothes"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <TextView
-                android:id="@+id/textViewLabelNew"
-                android:layout_width="80dp"
-                android:layout_height="40dp"
+                android:id="@+id/tvLabel"
+                android:layout_width="63dp"
+                android:layout_height="24dp"
 
-                android:layout_marginTop="16dp"
-                android:background="#FF0000"
-
-                android:fontFamily="@font/pt_root_bold"
+                android:layout_marginTop="24dp"
 
                 android:gravity="center"
-                android:text="Sale"
-                android:textSize="24dp"
-                android:textColor="@color/black"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.cardview.widget.CardView>
+                android:visibility="gone"
+
+                android:text="NEW"
+                android:textSize="12dp"
+                android:background="#CDCFD6"
+                android:fontFamily="@font/pt_root_bold"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/tvLabelSale"
+                android:layout_width="120dp"
+                android:layout_height="24dp"
+
+                android:layout_marginTop="24dp"
+
+                android:gravity="center"
+
+                android:visibility="gone"
+
+                android:text="Лучшая цена"
+                android:textSize="12dp"
+                android:background="#CDCFD6"
+                android:fontFamily="@font/pt_root_bold"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <ImageView
+                android:id="@+id/imView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:src="@drawable/ic_favorite_empty"
+                android:layout_marginEnd="12dp"
+                android:layout_marginTop="12dp"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/textViewName"
+            android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="15dp"
-            android:text="Название одежды вот такой длины"
-            android:textColor="@color/black"
-            android:textSize="18dp"
 
+            android:layout_marginTop="8dp"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageViewNewClothes2" />
+            android:text="Жакет Weekend Max Mara ONDINA..."
 
-        <TextView
-            android:id="@+id/textViewPrice"
-            android:layout_width="wrap_content"
+            android:fontFamily="@font/montserrat_regular"
+            android:textSize="14dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="15dp"
 
-            android:text="3223232323"
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            android:fontFamily="@font/pt_root_bold"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal">
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewName" />
+            <TextView
+                android:id="@+id/tvPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
 
-        <TextView
-            android:id="@+id/textViewNewPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
+                android:fontFamily="@font/montserrat_semibold"
 
-            android:text="22222"
-            android:textColor="#C53434"
-            android:textSize="18dp"
+                android:gravity="start|center"
+                android:layout_weight="1"
 
-            android:textStyle="italic"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewPrice" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                android:text="99 000 ₽"
+                android:textColor="#32302F"
+                android:textSize="16dp" />
+
+            <TextView
+                android:id="@+id/tvPriceDiscount"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+
+                android:fontFamily="@font/montserrat_semibold"
+                android:layout_weight="3"
+                android:gravity="start|center"
+
+                android:textColor="#32302F"
+                android:textSize="18dp"/>
+
+            <ImageView
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+
+                android:layout_weight="1"
+
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_bag_to_cart" />
+        </LinearLayout>
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
