--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -208,15 +208,71 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textViewSales" />
 
+            <LinearLayout
+                android:id="@+id/ll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+
+                app:layout_constraintTop_toBottomOf="@id/recyclerViewSales"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <LinearLayout
+                    android:id="@+id/fr"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+
+                    android:layout_marginTop="45dp"
+                    android:layout_marginStart="16dp">
+
+<!--                    <LinearLayout-->
+<!--                        android:id="@+id/container"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        android:orientation="horizontal"-->
+<!--                        android:layout_marginBottom="16dp">-->
+
+<!--                        <TextView-->
+<!--                            android:id="@+id/tvSlug"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+
+<!--                            android:layout_gravity="start"-->
+
+<!--                            android:textSize="20dp"-->
+<!--                            android:fontFamily="@font/cormorant_garamond_semibold"-->
+<!--                            android:textColor="@color/grey"/>-->
+
+<!--                        <TextView-->
+<!--                            android:id="@+id/tvAll"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:text="@string/all"-->
+
+<!--                            android:layout_weight="5"-->
+<!--                            android:gravity="end|center"-->
+<!--                            android:layout_marginEnd="16dp"-->
+
+<!--                            android:textSize="16dp"-->
+<!--                            android:fontFamily="@font/montserrat_medium"-->
+<!--                            android:textColor="#32302F"/>-->
+<!--                    </LinearLayout>-->
+
+                </LinearLayout>
+            </LinearLayout>
+
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                app:layout_constraintTop_toBottomOf="@id/recyclerViewSales"
+                app:layout_constraintTop_toBottomOf="@id/ll"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </ScrollView>
 
