--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="grey">#515562</color>
     <color name="semi_black">#323540</color>
     <color name="grey_2">#CDCFD6</color>
+    <color name="black_2">#32302F</color>
 
 </resources>
