--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#6300897B">
+    android:background="#515562">
 
     <TextView
         android:layout_width="wrap_content"
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
 
         android:text="@string/app_name"
-        android:textSize="100dp"
-        android:fontFamily="@font/futura_book"
-        android:textColor="@color/black"/>
+        android:textSize="36dp"
+        android:fontFamily="@font/futura_pt_medium"
+        android:textColor="@color/white"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
