--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,9 +31,9 @@
         android:layout_marginTop="17dp"
 
         android:background="@drawable/seach_view_background"
-        android:queryHint="search"
+        android:queryHint="Поиск"
 
-        android:iconifiedByDefault="false"
+        android:iconifiedByDefault="true"
         android:inputType="text"
 
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,9 +41,10 @@
         app:layout_constraintTop_toBottomOf="@id/textViewLogo"/>
 
     <ScrollView
+        android:id="@+id/sv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchView"
@@ -58,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
 
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:layout_marginHorizontal="16dp"
                 app:cardCornerRadius="15dp"
 
@@ -197,6 +199,21 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/recyclerViewNewCollection" />
 
+            <cz.intik.overflowindicator.OverflowPagerIndicator
+                android:id="@+id/viewOverflowPagerIndicator2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                app:indicatorFillColor="@color/grey"
+                app:indicatorStrokeColor="@color/black"
+                app:indicatorSize="8dp"
+
+                android:layout_marginEnd="16dp"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/textViewSales"
+                app:layout_constraintBottom_toBottomOf="@id/textViewSales"/>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewSales"
                 android:layout_width="match_parent"
@@ -208,24 +225,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textViewSales" />
 
+
             <LinearLayout
-                android:id="@+id/ll"
+                android:id="@+id/fr"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+
+                android:layout_marginTop="45dp"
+                android:orientation="vertical"
+                    android:layout_marginStart="16dp"
 
                 app:layout_constraintTop_toBottomOf="@id/recyclerViewSales"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
-
-                <LinearLayout
-                    android:id="@+id/fr"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-
-                    android:layout_marginTop="45dp"
-                    android:layout_marginStart="16dp">
 
 <!--                    <LinearLayout-->
 <!--                        android:id="@+id/container"-->
@@ -260,13 +272,13 @@
 <!--                            android:textColor="#32302F"/>-->
 <!--                    </LinearLayout>-->
 
-                </LinearLayout>
             </LinearLayout>
+
 
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                app:layout_constraintTop_toBottomOf="@id/ll"
+                app:layout_constraintTop_toBottomOf="@id/fr"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"/>
