--- a/app/src/main/res/layout/item_catalog.xml
+++ b/app/src/main/res/layout/item_catalog.xml
@@ -2,112 +2,140 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="35dp"
+    android:layout_marginEnd="16dp">
 
-    app:cardCornerRadius="15dp"
-    android:layout_margin="10dp">
+    <LinearLayout
+        android:layout_width="164dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@drawable/gradient">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="164dp"
+            android:layout_height="216dp"
+            android:layout_marginHorizontal="38dp"
+            android:layout_gravity="center">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/imageViewNewClothes2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/splash"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            <com.denzcoskun.imageslider.ImageSlider
+                android:id="@+id/imSlider"
+                android:layout_width="164dp"
+                android:layout_height="216dp"
 
-            <ImageView
-                android:id="@+id/imageViewNewClothes"
-                android:layout_width="150dp"
-                android:layout_height="140dp"
-                android:scaleType="fitStart"
-                android:src="@drawable/jesus"
+
+                app:iss_error_image="@drawable/jesus"
+                app:iss_unselected_dot="@drawable/default_unselected_dot"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <TextView
-                android:id="@+id/textViewLabelNew"
-                android:layout_width="80dp"
-                android:layout_height="40dp"
+                android:id="@+id/tvLabel"
+                android:layout_width="63dp"
+                android:layout_height="24dp"
 
-                android:layout_marginTop="16dp"
-                android:background="#FF0000"
+                android:layout_marginTop="24dp"
 
-                android:fontFamily="@font/pt_root_bold"
                 android:gravity="center"
+                android:visibility="gone"
 
                 android:text="NEW"
-                android:textColor="@color/black"
-                android:textSize="24dp"
+                android:textSize="12dp"
+                android:background="#CDCFD6"
+                android:fontFamily="@font/pt_root_bold"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/tvLabelSale"
+                android:layout_width="120dp"
+                android:layout_height="24dp"
+
+                android:layout_marginTop="24dp"
+
+                android:gravity="center"
+
                 android:visibility="gone"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.cardview.widget.CardView>
+
+                android:text="Лучшая цена"
+                android:textSize="12dp"
+                android:background="#CDCFD6"
+                android:fontFamily="@font/pt_root_bold"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <ImageView
+                android:id="@+id/imViewFavorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:src="@drawable/ic_favorite_empty"
+                android:layout_marginEnd="12dp"
+                android:layout_marginTop="12dp"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
-            android:id="@+id/textViewName"
+            android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
-            android:text="Название одежды вот такой длины"
-            android:textColor="@color/black"
-            android:textSize="18dp"
 
+            android:layout_marginTop="8dp"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/imageViewNewClothes2" />
+            android:text="Жакет Weekend Max Mara ONDINA..."
 
-        <TextView
-            android:id="@+id/textViewPrice"
-            android:layout_width="wrap_content"
+            android:fontFamily="@font/montserrat_regular"
+            android:textSize="14dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
 
-            android:text="1 789₽"
-            android:textColor="@color/black"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="8dp"
+            android:orientation="horizontal">
 
-            android:textSize="20dp"
-            android:textStyle="bold"
+            <TextView
+                android:id="@+id/tvPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewName" />
+                android:fontFamily="@font/montserrat_semibold"
 
+                android:gravity="start|center"
+                android:layout_weight="1"
 
-        <TextView
-            android:id="@+id/add"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+                android:text="99 000 ₽"
+                android:textColor="#32302F"
+                android:textSize="16dp" />
 
-            android:background="@drawable/ic_add_to_cart"
-            android:layout_marginEnd="5dp"
+            <TextView
+                android:id="@+id/tvPriceDiscount"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
 
-            app:layout_constraintBottom_toBottomOf="@+id/textView"
-            app:layout_constraintEnd_toStartOf="@+id/textView"
-            app:layout_constraintTop_toTopOf="@+id/textView" />
+                android:fontFamily="@font/montserrat_semibold"
+                android:layout_weight="3"
+                android:gravity="start|center"
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+                android:textColor="#32302F"
+                android:textSize="18dp"/>
 
-            android:layout_marginEnd="10dp"
+            <ImageView
+                android:layout_width="32dp"
+                android:layout_height="32dp"
 
-            android:background="@drawable/ic_favorite_empty"
+                android:layout_weight="1"
 
-            app:layout_constraintTop_toBottomOf="@id/textViewPrice"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_bag_to_cart" />
+        </LinearLayout>
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
