--- a/app/src/main/res/drawable/ic_search.xml
+++ b/app/src/main/res/drawable/ic_search.xml
@@ -1,5 +1,10 @@
-<vector android:height="32dp" android:tint="#000000"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M15.5,14h-0.79l-0.28,-0.27C15.41,12.59 16,11.11 16,9.5 16,5.91 13.09,3 9.5,3S3,5.91 3,9.5 5.91,16 9.5,16c1.61,0 3.09,-0.59 4.23,-1.57l0.27,0.28v0.79l5,4.99L20.49,19l-4.99,-5zM9.5,14C7.01,14 5,11.99 5,9.5S7.01,5 9.5,5 14,7.01 14,9.5 11.99,14 9.5,14z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M11.024,3.463C9.019,3.463 7.096,4.26 5.678,5.678C4.26,7.096 3.463,9.019 3.463,11.024C3.463,13.03 4.26,14.953 5.678,16.371C7.096,17.789 9.019,18.585 11.024,18.585C13.022,18.585 14.938,17.795 16.355,16.387C16.361,16.38 16.368,16.373 16.375,16.366C16.381,16.36 16.387,16.354 16.394,16.348C17.797,14.932 18.585,13.019 18.585,11.024C18.585,9.019 17.789,7.096 16.371,5.678C14.953,4.26 13.03,3.463 11.024,3.463ZM4.643,4.643C6.336,2.951 8.631,2 11.024,2C13.418,2 15.713,2.951 17.406,4.643C19.098,6.336 20.049,8.631 20.049,11.024C20.049,13.171 19.284,15.239 17.905,16.864L21.786,20.751C22.072,21.037 22.071,21.501 21.785,21.786C21.499,22.072 21.036,22.071 20.75,21.785L16.871,17.899C15.245,19.282 13.174,20.049 11.024,20.049C8.631,20.049 6.336,19.098 4.643,17.406C2.951,15.713 2,13.418 2,11.024C2,8.631 2.951,6.336 4.643,4.643Z"
+      android:fillColor="#515562"
+      android:fillType="evenOdd"/>
 </vector>
