--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,29 +22,40 @@
         android:fontFamily="@font/futura_medium"
         android:textColor="@color/grey" />
 
-    <SearchView
+    <androidx.cardview.widget.CardView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
 
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="17dp"
 
-        android:background="@drawable/seach_view_background"
-        android:queryHint="Поиск"
 
-        android:iconifiedByDefault="true"
-        android:inputType="text"
+        app:cardCornerRadius="63dp"
+        app:cardElevation="10dp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textViewLogo"/>
+        app:layout_constraintTop_toBottomOf="@id/textViewLogo">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginStart="16dp"
+            android:text="Поиск"
+            android:gravity="center|start"
+            android:fontFamily="@font/montserrat_medium"
+            android:textSize="16dp"
+
+            android:drawableStart="@drawable/ic_search"
+            android:drawablePadding="10dp"/>
+    </androidx.cardview.widget.CardView>
 
     <ScrollView
         android:id="@+id/sv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="112dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/searchView"
