--- a/app/src/main/res/layout/dialog_choose_size.xml
+++ b/app/src/main/res/layout/dialog_choose_size.xml
@@ -45,33 +45,28 @@
         <RadioGroup
             android:id="@+id/radioGroup"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="26dp"
+            android:layout_marginHorizontal="16dp">
         </RadioGroup>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnToCart"
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="76dp"
+            app:cardElevation="10dp">
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_marginHorizontal="16dp"
+                android:id="@+id/btnToCart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
 
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="24dp"
-            android:layout_gravity="center"
+                android:layout_gravity="center"
 
-            android:text="В корзину"
-            android:background="@color/black_2"
-            android:textColor="@color/white"
-            android:clickable="false"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:layout_margin="16dp"
-
-            android:gravity="center"
-            android:text="@string/write_primerky"
-            android:textSize="16dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:textColor="@color/black_2"/>
+                android:fontFamily="@font/montserrat_regular"
+                android:text="В корзину"
+                android:textSize="16dp"
+                android:background="@color/black_2"
+                android:textColor="@color/white"/>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
