--- a/app/src/main/res/layout/fragment_goods.xml
+++ b/app/src/main/res/layout/fragment_goods.xml
@@ -20,15 +20,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:layout_constraintStart_toStartOf="@id/imageView"
-                app:layout_constraintTop_toTopOf="@id/imageView"
-                app:layout_constraintEnd_toEndOf="@id/imageView"
-                app:layout_constraintBottom_toBottomOf="@id/imageView"
-                android:visibility="visible"/>
+<!--            <ProgressBar-->
+<!--                android:id="@+id/progressBar"-->
+<!--                android:layout_width="100dp"-->
+<!--                android:layout_height="100dp"-->
+<!--                app:layout_constraintStart_toStartOf="@id/imageView"-->
+<!--                app:layout_constraintTop_toTopOf="@id/imageView"-->
+<!--                app:layout_constraintEnd_toEndOf="@id/imageView"-->
+<!--                app:layout_constraintBottom_toBottomOf="@id/imageView"-->
+<!--                android:visibility="visible"/>-->
 
             <com.denzcoskun.imageslider.ImageSlider
                 android:id="@+id/imageView"
