--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -21,7 +21,7 @@
 
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="0dp"
-          android:layout_height="0dp"
+          android:layout_height="wrap_content"
 
           android:layout_marginStart="16dp"
 
@@ -35,7 +35,7 @@
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
 
-             android:text="Cady shirt dress"
+             android:text="Cady shirt dressCady shirt dress"
              android:fontFamily="@font/montserrat_regular"
              android:textSize="16dp"
              android:textColor="@color/black_2"
