--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -12,7 +12,7 @@
         android:icon="@drawable/ic_favorite"/>
 
     <item
-        android:id="@+id/cardFragment"
+        android:id="@+id/cartGraph"
         android:title="@string/card"
         android:icon="@drawable/ic_card"/>
 
