--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,11 +6,6 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/homeGraph">
     <fragment
-        android:id="@+id/cardFragment"
-        android:name="com.example.logo.ui.card.CardFragment"
-        android:label="fragment_card"
-        tools:layout="@layout/fragment_card" />
-    <fragment
         android:id="@+id/favoriteFragment"
         android:name="com.example.logo.ui.favorite.FavoriteFragment"
         android:label="fragment_favorite"
@@ -69,6 +64,23 @@
             android:name="com.example.logo.ui.goods.Gallery"
             android:label="fragment_gallery"
             tools:layout="@layout/fragment_gallery" />
+    </navigation>
+    <navigation android:id="@+id/cartGraph"
+        app:startDestination="@id/cardFragment">
+        <fragment
+            android:id="@+id/ordering"
+            android:name="com.example.logo.ui.card.Ordering"
+            android:label="fragment_ordering"
+            tools:layout="@layout/fragment_ordering" />
+        <fragment
+            android:id="@+id/cardFragment"
+            android:name="com.example.logo.ui.card.CardFragment"
+            android:label="fragment_card"
+            tools:layout="@layout/fragment_card">
+            <action
+                android:id="@+id/action_cardFragment_to_ordering"
+                app:destination="@id/ordering" />
+        </fragment>
     </navigation>
 
 </navigation>
