--- a/app/src/main/res/layout/dialog_registration.xml
+++ b/app/src/main/res/layout/dialog_registration.xml
@@ -45,6 +45,7 @@
         android:textSize="14dp"/>
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -65,9 +66,9 @@
 
             android:textColor="@color/black"
             android:inputType="number"
-            app:mask="-(000) 000-00-00"
-            app:maskCharacter="0"
-            app:maskStyle="completable" />
+            app:mask="-(___) ___-__-__"
+            app:maskCharacter="_"
+            app:maskStyle="persistent" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
