--- a/app/src/main/res/layout/dialog_sms.xml
+++ b/app/src/main/res/layout/dialog_sms.xml
@@ -20,6 +20,7 @@
            android:layout_marginHorizontal="24dp">
 
            <ImageButton
+               android:id="@+id/btnBack"
                android:layout_width="16dp"
                android:layout_height="16dp"
 
@@ -40,6 +41,7 @@
        </LinearLayout>
 
        <TextView
+           android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
 
@@ -48,9 +50,7 @@
 
 
            android:textColor="#706864"
-           android:text="Отправили сообщение на номер:
-
-                   +7 (000) 000-00-00"
+           android:text="@string/send_sms_to_number"
            android:textSize="16dp"/>
 
        <com.google.android.material.textfield.TextInputLayout
@@ -70,13 +70,13 @@
                android:layout_height="wrap_content"
 
                android:inputType="number"
-               app:mask="____"
+               app:mask="______"
                app:maskCharacter="_"
                app:maskStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>
 
        <androidx.appcompat.widget.AppCompatButton
-           android:id="@+id/btnGetCode"
+           android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
 
@@ -84,10 +84,12 @@
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="24dp"
            android:layout_gravity="center"
+           android:textAllCaps="false"
 
-           android:text="ОТправить код снова"
-           android:background="@color/splash"
+           android:text="Отправить код снова"
+           android:background="@drawable/btn_background"
            android:textColor="@color/black"
-           android:clickable="false"/>
+           android:clickable="false"
+           android:fontFamily="@font/montserrat_medium"/>
    </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
