--- a/app/src/main/res/layout/item_big_card.xml
+++ b/app/src/main/res/layout/item_big_card.xml
@@ -123,6 +123,7 @@
                 android:textSize="18dp"/>
 
             <ImageView
+                android:id="@+id/addToCart"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
 
