--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -60,8 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="106dp"
                 android:orientation="vertical"
-                android:layout_marginTop="300dp"
-                android:visibility="gone">
+                android:layout_marginTop="300dp">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -88,6 +87,7 @@
                 android:id="@+id/containerSearch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="vertical"
 
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="16dp">
