--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -23,60 +23,75 @@
                 android:id="@+id/tvBack"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@drawable/ic_back"
+                android:layout_marginStart="16dp"
+                android:background="@drawable/ic_back_button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
             <TextView
-                android:id="@+id/tvSearch"
+                android:id="@+id/tvCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+
+                android:gravity="center"
+
                 android:text="Категория"
+                android:textColor="@color/black_2"
+                android:textSize="22dp"
+                android:fontFamily="@font/cormorant_garamond_semibold"
+                android:textAllCaps="true"
 
-                android:textColor="@color/black"
-
-                android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="@+id/tvBack"
+                app:layout_constraintEnd_toStartOf="@+id/btnSearch"
                 app:layout_constraintStart_toEndOf="@id/tvBack"
                 app:layout_constraintTop_toTopOf="@+id/tvBack" />
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="30dp"
 
-                android:layout_height="30dp"
-                android:layout_marginEnd="20dp"
-                android:src="@drawable/ic_sort"
-                app:layout_constraintBottom_toBottomOf="@id/tvBack"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tvBack" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnSearch"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
 
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="15dp"
+               android:background="@drawable/ic_search"
 
-                android:background="@drawable/ic_search"
-
-                android:textColor="@color/black"
-
-                android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="@+id/tvBack"
-                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tvBack" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.appcompat.widget.AppCompatToggleButton
+            android:id="@+id/toggleButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_sort"
+
+            android:layout_gravity="center"
+            app:layout_scrollFlags="scroll|enterAlways"
+
+            android:textOff="Сортировка (Цена)"
+            android:textColor="@color/black_2"
+            android:fontFamily="@font/montserrat_medium"
+            android:textSize="12dp"
+            android:drawablePadding="10dp"
+            android:paddingHorizontal="10dp"
+
+            android:background="@color/white"
+            style="?android:attr/borderlessButtonStyle"
+            />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_height="wrap_content"
+
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="40dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
