--- a/app/src/main/res/drawable/ic_sort.xml
+++ b/app/src/main/res/drawable/ic_sort.xml
@@ -1,5 +1,12 @@
-<vector android:autoMirrored="true" android:height="32dp"
-    android:tint="#000000" android:viewportHeight="24"
-    android:viewportWidth="24" android:width="32dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M3,18h6v-2L3,16v2zM3,6v2h18L21,6L3,6zM3,13h12v-2L3,11v2z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="16dp"
+    android:height="14dp"
+    android:viewportWidth="16"
+    android:viewportHeight="14">
+  <path
+      android:pathData="M8.417,10.138L11.084,12.805C11.344,13.065 11.766,13.065 12.027,12.805L14.693,10.138C14.954,9.878 14.954,9.456 14.693,9.195C14.433,8.935 14.011,8.935 13.751,9.195L12.222,10.724V1.667C12.222,1.298 11.924,1 11.555,1C11.187,1 10.889,1.298 10.889,1.667V10.724L9.36,9.195C9.1,8.935 8.678,8.935 8.417,9.195C8.157,9.456 8.157,9.878 8.417,10.138ZM4.916,1.195C4.655,0.935 4.233,0.935 3.973,1.195L1.306,3.862C1.046,4.122 1.046,4.544 1.306,4.805C1.567,5.065 1.989,5.065 2.249,4.805L3.778,3.276V12.333C3.778,12.701 4.076,13 4.444,13C4.812,13 5.111,12.701 5.111,12.333V3.276L6.64,4.805C6.9,5.065 7.322,5.065 7.582,4.805C7.843,4.544 7.843,4.122 7.582,3.862L4.916,1.195Z"
+      android:strokeWidth="0.3"
+      android:fillColor="#000000"
+      android:fillType="evenOdd"
+      android:strokeColor="#ffffff"/>
 </vector>
