--- a/app/src/main/res/layout/dialog_table_size.xml
+++ b/app/src/main/res/layout/dialog_table_size.xml
@@ -38,15 +38,306 @@
 
                 android:src="@drawable/ic_crest"
 
-                android:layout_weight="0.1"                />
+                android:layout_weight="0.1" />
 
         </LinearLayout>
 
-        <TextView
-            android:layout_marginTop="16dp"
+        <GridLayout
             android:layout_width="match_parent"
-            android:layout_height="240dp"
-            android:background="@color/grey_2"            />
+            android:layout_height="wrap_content"
+            android:columnCount="4"
+            android:padding="16dp"
+            android:layout_marginTop="16dp"
+            android:background="#EAEBED">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RUS"
+                android:layout_columnWeight="0.25"
+
+                android:layout_column="0"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0.25"
+                android:text="Обхват груди"
+                android:layout_column="1"
+                android:layout_gravity="end|center"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0.25"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:layout_gravity="end|center"
+
+                android:fontFamily="@font/montserrat_medium"
+                android:text="Обхват груди"
+                android:textColor="@color/black"
+                android:textSize="14dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="3"
+
+                android:text="Обхват груди"
+                android:layout_gravity="end|center"
+                android:layout_columnWeight="0.25"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+
+        </GridLayout>
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="4"
+            android:padding="16dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="40 (XS)"
+                android:layout_columnWeight="0"
+
+                android:layout_column="0"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0.25"
+                android:text="78-82"
+                android:layout_column="1"
+                android:layout_gravity="end|center"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0.25"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:layout_gravity="end|center"
+
+                android:fontFamily="@font/montserrat_medium"
+                android:text="60-64"
+                android:textColor="@color/black"
+                android:textSize="14dp" />
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_column="3"
+
+                android:text="86-90"
+                android:layout_gravity="end|center"
+                android:layout_columnWeight="0.25"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+        </GridLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+
+
+            android:background="#32302F"
+            android:alpha="0.1"/>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="4"
+            android:padding="16dp">
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:text="42 (S)"
+                android:layout_columnWeight="0"
+
+                android:layout_column="0"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="0"
+                android:layout_column="1"
+                android:layout_columnWeight="0.25"
+                android:layout_gravity="end|center"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="82-86"
+                android:textColor="@color/black"
+                android:textSize="14dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0.25"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:layout_gravity="end|center"
+
+                android:fontFamily="@font/montserrat_medium"
+                android:text="64-68"
+                android:textColor="@color/black"
+                android:textSize="14dp" />
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_column="3"
+
+                android:text="90-94"
+                android:layout_gravity="end|center"
+                android:layout_columnWeight="0.25"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+        </GridLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+
+
+            android:background="#32302F"
+            android:alpha="0.1"/>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="4"
+            android:padding="16dp">
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:text="44 (M)"
+                android:layout_columnWeight="0"
+
+                android:layout_column="0"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0.25"
+                android:text="86-90"
+                android:layout_column="1"
+                android:layout_gravity="end|center"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0.25"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:layout_gravity="end|center"
+
+                android:fontFamily="@font/montserrat_medium"
+                android:text="68-72"
+                android:textColor="@color/black"
+                android:textSize="14dp" />
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_column="3"
+
+                android:text="94-98"
+                android:layout_gravity="end|center"
+                android:layout_columnWeight="0.25"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+        </GridLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+
+
+            android:background="#32302F"
+            android:alpha="0.1"/>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:columnCount="4"
+            android:padding="16dp">
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:text="46 (L)"
+                android:layout_columnWeight="0"
+
+                android:layout_column="0"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0.25"
+                android:text="90-94 "
+                android:layout_column="1"
+                android:layout_gravity="end|center"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="0.25"
+                android:layout_row="0"
+                android:layout_column="2"
+                android:layout_gravity="end|center"
+
+                android:fontFamily="@font/montserrat_medium"
+                android:text="72-76"
+                android:textColor="@color/black"
+                android:textSize="14dp" />
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_column="3"
+
+                android:text="98-102"
+                android:layout_gravity="end|center"
+                android:layout_columnWeight="0.25"
+                android:fontFamily="@font/montserrat_medium"
+                android:textSize="14dp"
+                android:textColor="@color/black"/>
+        </GridLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+
+
+            android:background="#32302F"
+            android:alpha="0.1"/>
+
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnToCart"
@@ -56,6 +347,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginHorizontal="24dp"
             android:layout_gravity="center"
+            android:visibility="gone"
 
             android:text="В корзину"
             android:background="@color/black_2"
@@ -71,7 +363,7 @@
             android:gravity="center"
             android:text="@string/write_primerky"
             android:textSize="16dp"
-            android:fontFamily="@font/montserrat_regular"
-            android:textColor="@color/black_2"/>
+            android:fontFamily="@font/montserrat_medium"
+            android:textColor="@color/black"/>
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
